--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                         <div class="col-lg-6 wholeTok d-xl-none d-lg-block d-none pe-lg-0">
                             <div class="innerWrapper p-0 shadow-none h-100">
                                 <div
-                                    class="tokenWrap d-flex align-items-center justify-content-sm-between flex-wrap text-sm-start text-center flex-sm-row justify-content-center flex-column h-100">
+                                    class="tokenWrap d-flex align-items-center justify-content-sm-evenly flex-wrap text-sm-start text-center flex-sm-row justify-content-center flex-column h-100">
                                     <div class="img-tok">
                                         <img src="./assets/re-tok.png" alt="token" />
                                     </div>
@@ -470,9 +470,9 @@
                         </div>
 
                         <div class="col-lg-5 wholeTok px-xl-2 px-0 mt-xl-0 mt-3">
-                            <div class="innerWrapper p-xl-3 p-0">
+                            <div class="innerWrapper p-xl-2 p-0">
                                 <div
-                                    class="d-xl-flex tokenWrap d-lg-none d-flex align-items-center justify-content-sm-between flex-wrap text-sm-start text-center justify-content-center mb-3">
+                                    class="d-xl-flex tokenWrap d-lg-none d-flex align-items-center justify-content-sm-evenly flex-wrap text-sm-start text-center justify-content-center mb-2">
                                     <div class="img-tok">
                                         <img src="./assets/re-tok.png" alt="token" />
                                     </div>
@@ -482,7 +482,7 @@
                                     </div>
                                 </div>
                                 <div
-                                    class="tokenWrap d-flex align-items-center justify-content-sm-between flex-wrap text-sm-start text-center justify-content-center mb-3">
+                                    class="tokenWrap d-flex align-items-center justify-content-sm-evenly flex-wrap text-sm-start text-center justify-content-center mb-2">
                                     <div class="img-tok">
                                         <img src="./assets/modalTab.png" alt="token" />
                                     </div>
@@ -492,7 +492,7 @@
                                     </div>
                                 </div>
                                 <div
-                                    class="tokenWrap d-flex align-items-center justify-content-sm-between flex-wrap text-sm-start text-center justify-content-center">
+                                    class="tokenWrap d-flex align-items-center justify-content-sm-evenly flex-wrap text-sm-start text-center justify-content-center">
                                     <div class="img-tok">
                                         <img src="./assets/listToken.png" alt="token" />
                                     </div>
@@ -505,15 +505,15 @@
                         </div>
 
 
-                        <div class="col-xl-4 col-lg-6 px-xl-2 px-0 py-xl-0 py-2 smPad">
+                        <div class="col-xl-4 col-lg-6  px-0 py-xl-0 smPad">
                             <div class="row mx-0 h-100 modalRow">
-                                <div class="total col-lg-12 col-6 h-50 mt-1 pb-2 pe-0">
+                                <div class="total col-lg-12 col-6 h-50 mt-1 px-0">
                                     <div class="inner d-flex justify-content-center flex-column h-100">
                                         <h3>Total Brand Revenue</h3>
                                         <h2>€592,912</h2>
                                     </div>
                                 </div>
-                                <div class="total col-lg-12 col-6 h-50 mt-1 py-lg-2 pb-2 pt-0 pe-0">
+                                <div class="total col-lg-12 col-6 h-50 mt-1 py-lg-2 pb-2 pt-0 px-0">
                                     <div class="inner d-flex justify-content-center flex-column h-100">
                                         <h3>Via Email Marketing</h3>
                                         <h2>€172,382</h2>
@@ -522,8 +522,8 @@
                             </div>
                         </div>
 
-                        <div class="col-12 tabsModal mt-3 pt-3 pb-2">
-                            <img src="./assets/image 1.jpg" alt="">
+                        <div class="col-12 tabsModal mt-3 py-2">
+                            <img src="./assets/image 1.jpg" width="100%" alt="">
                         </div>
                     </div>
                 </div>
