--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             <h1 class="mainHead">Meet Our CEO</h1>
         </div>
         <div class="row mx-0 py-5 justify-content-center">
-            <div class="d-flexjustify-content-center my-3 col-md-5 col-sm-10">
+            <div class="d-flex justify-content-center my-3 col-md-5 col-sm-10">
                 <div class="ceoImg">
                     <img src="./assets/ceo.png" width="100%" alt="CEO" />
                 </div>
