--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     <!-- Header -->
 
     <!-- Services -->
-    <section class="serviceSec container-lg mt-5 py-4" id="services">
-        <div class="topHead">
+    <section class="serviceSec container-lg pt-5 mb-4" id="services">
+        <div class="topHead pt-5">
             <h3 class="subHead">Services</h3>
             <h1 class="mainHead">What Do We Do?</h1>
         </div>
@@ -137,8 +137,8 @@
     <!-- Services -->
 
     <!-- Result -->
-    <section class="resultSec py-5 my-5 position-relative" id="result">
-        <div class="topHead container-lg">
+    <section class="resultSec py-5 mb-5 position-relative" id="result">
+        <div class="topHead container-lg pt-5">
             <h3 class="subHead">Results</h3>
             <h1 class="mainHead">Client Results</h1>
         </div>
@@ -533,7 +533,7 @@
     <!-- Result -->
 
     <!-- Meet CEO -->
-    <section class="meet-ceo my-5 container-lg" id="ceo">
+    <section class="meet-ceo py-5 container-lg" id="ceo">
         <div class="topHead my-5 pt-5">
             <h1 class="mainHead">Meet Our CEO</h1>
         </div>
@@ -572,8 +572,8 @@
     <!-- Meet CEO -->
 
     <!-- FAQs -->
-    <section class="faqs-sec my-5 py-5" id="faq">
-        <div class="topHead container-lg pb-5">
+    <section class="faqs-sec mb-5 py-5" id="faq">
+        <div class="topHead container-lg py-5">
             <h3 class="subHead">FAQS</h3>
             <h1 class="mainHead">Frequently Asked Question</h1>
         </div>
@@ -713,8 +713,8 @@
     <!-- FAQs -->
 
     <!-- Contact Sec -->
-    <section class="contact-sec py-5 text-white my-5" id="contact">
-        <div class="container-lg">
+    <section class="contact-sec py-5 text-white" id="contact">
+        <div class="container-lg py-5">
             <div class="topHead pb-5">
                 <h3 class="subHead text-white">Contact</h3>
                 <h1 class="mainHead text-white">Get In Touch</h1>
