--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
                         placeholder="Your Message"></textarea>
                 </div>
                 <div class="col-12 d-flex justify-content-center mt-4 pt-md-3">
-                    <button type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" type="button"
+                    <button type="button" data-bs-toggle="modal" data-bs-target="#contactModal" type="button"
                         class="btn-submit">Send Message</button>
                 </div>
             </form>
@@ -751,8 +751,8 @@
         <!-- Modal -->
     </section>
     <!-- Modal -->
-    <div class="contactModal modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
-        tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="contactModal modal fade" id="contactModal" data-bs-backdrop="static" data-bs-keyboard="false"
+        tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
