--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
                                         <img src="./assets/re-tok.png" alt="token" />
                                     </div>
                                     <div class="dets">
-                                        <h3>Case #2</h3>
-                                        <p>3 months campaign</p>
+                                        <h3>Flows</h3>
+                                        <p>€162,812</p>
                                     </div>
                                 </div>
                             </div>
@@ -477,8 +477,8 @@
                                         <img src="./assets/re-tok.png" alt="token" />
                                     </div>
                                     <div class="dets">
-                                        <h3>Case #2</h3>
-                                        <p>3 months campaign</p>
+                                        <h3>Flows</h3>
+                                        <p>€162,812</p>
                                     </div>
                                 </div>
                                 <div
@@ -487,8 +487,8 @@
                                         <img src="./assets/modalTab.png" alt="token" />
                                     </div>
                                     <div class="dets">
-                                        <h3>Case #2</h3>
-                                        <p>3 months campaign</p>
+                                        <h3>Campaigns</h3>
+                                        <p>€823,121</p>
                                     </div>
                                 </div>
                                 <div
