--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                                         <img src="./assets/listToken.png" alt="token" />
                                     </div>
                                     <div class="dets">
-                                        <h3>Case #2</h3>
+                                        <h3>€ / Recipient</h3>
                                         <p>3 months campaign</p>
                                     </div>
                                 </div>
