--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         </nav>
         <!-- Navbar -->
 
+        <!-- Hero Sec -->
         <section class="heroSec d-flex align-items-center justify-content-center text-center" id="home">
             <div class="inner">
                 <h1>
@@ -73,6 +74,7 @@
 
 
         </section>
+        <!-- Hero Sec -->
     </header>
     <!-- Header -->
 
@@ -529,6 +531,7 @@
                 </div>
             </div>
         </div>
+        <!-- Modal -->
     </section>
     <!-- Result -->
 
@@ -750,7 +753,9 @@
         <!-- Button trigger modal -->
         <!-- Modal -->
     </section>
-    <!-- Modal -->
+    <!-- Contact Sec -->
+
+    <!-- Contact Modal -->
     <div class="contactModal modal fade" id="contactModal" data-bs-backdrop="static" data-bs-keyboard="false"
         tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
@@ -766,7 +771,8 @@
             </div>
         </div>
     </div>
-    <!-- Contact Sec -->
+    <!-- Modal -->
+
 
     <!-- Footer  -->
     <footer class="pt-5 pb-md-3 pb-3">
