--- a/index.html
+++ b/index.html
@@ -26,29 +26,30 @@
                 <a class="navbar-brand" href="#">
                     <img src="./assets/logo.png" height="100%" alt="" />
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler" type="button" id="toggler" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <img src="./assets/hamburger.png" alt="" />
+                    <img src="./assets/close.svg" alt="" />
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ms-auto align-items-center">
                         <li class="nav-item">
-                            <a class="nav-link redirectLink" href="#Home">Home </a>
+                            <a class="nav-link redirectLink linksNav" href="#Home">Home </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link redirectLink" href="#services">Services</a>
+                            <a class="nav-link redirectLink linksNav" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link redirectLink" href="#result">Result</a>
+                            <a class="nav-link redirectLink linksNav" href="#result">Result</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link redirectLink" href="#ceo">Our CEO </a>
+                            <a class="nav-link redirectLink linksNav" href="#ceo">Our CEO </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link redirectLink" href="#faq">FAQS</a>
+                            <a class="nav-link redirectLink linksNav" href="#faq">FAQS</a>
                         </li>
-                        <a href="#contact" class="vel-btn-solid redirectLink" type="submit">Contact us</a>
+                        <a href="#contact" class="vel-btn-solid redirectLink linksNav" type="submit">Contact us</a>
                     </ul>
                 </div>
             </div>
@@ -56,19 +57,22 @@
         <!-- Navbar -->
 
         <!-- Hero Sec -->
-        <section class="heroSec d-flex align-items-center justify-content-center text-center" id="home">
+        <section class="heroSec d-flex align-items-center justify-content-center text-center" id="Home">
             <div class="inner">
                 <h1>
                     Email & SMS Marketing <br />
                     For Fashion Brands
                 </h1>
                 <p>
-                     Discover the untapped revenue potential of your fashion <br class="breakLg" />
-                    brand with our expert backend marketing solutions.
+                    Discover the untapped revenue potential of your fashion.
+                    <br class="breakLg" />
+                    brand with our expert retention marketing solutions
                 </p>
                 <div class="btns">
-                    <a class="vel-btn-solid redirectLink d-inline-block" href="#result">Client Results</a>
-                    <a class="vel-btn-light redirectLink d-inline-block" href="#contact">Contact us</a>
+                    <a class="vel-btn-solid redirectLink d-inline-block" href="#services">Services</a>
+                    <a class="vel-btn-light redirectLink d-inline-block" href="#result">
+                        Client Results
+                    </a>
                 </div>
             </div>
 
@@ -459,11 +463,11 @@
                         <div class="col-lg-6 wholeTok d-xl-none d-lg-block d-none pe-lg-0">
                             <div class="innerWrapper p-0 shadow-none h-100">
                                 <div
-                                    class="tokenWrap d-flex align-items-center justify-content-sm-evenly flex-wrap text-sm-start text-center flex-sm-row justify-content-center flex-column h-100">
+                                    class="tokenWrap d-flex align-items-center justify-content-sm-start px-4 flex-wrap text-sm-start text-center flex-sm-row justify-content-center flex-column h-100">
                                     <div class="img-tok">
                                         <img src="./assets/re-tok.png" alt="token" />
                                     </div>
-                                    <div class="dets">
+                                    <div class="dets ms-4 mt-2">
                                         <h3>Flows</h3>
                                         <p>€162,812</p>
                                     </div>
@@ -474,31 +478,31 @@
                         <div class="col-lg-5 wholeTok px-xl-2 px-0 mt-xl-0 mt-3">
                             <div class="innerWrapper p-xl-2 p-0">
                                 <div
-                                    class="d-xl-flex tokenWrap d-lg-none d-flex align-items-center justify-content-sm-evenly flex-wrap text-sm-start text-center justify-content-center mb-2">
+                                    class="d-xl-flex tokenWrap d-lg-none d-flex align-items-center justify-content-sm-start px-4 flex-wrap text-sm-start text-center justify-content-center mb-2">
                                     <div class="img-tok">
                                         <img src="./assets/re-tok.png" alt="token" />
                                     </div>
-                                    <div class="dets">
+                                    <div class="dets ms-4 mt-2">
                                         <h3>Flows</h3>
                                         <p>€162,812</p>
                                     </div>
                                 </div>
                                 <div
-                                    class="tokenWrap d-flex align-items-center justify-content-sm-evenly flex-wrap text-sm-start text-center justify-content-center mb-2">
+                                    class="tokenWrap d-flex align-items-center justify-content-sm-start px-4 flex-wrap text-sm-start text-center justify-content-center mb-2">
                                     <div class="img-tok">
                                         <img src="./assets/modalTab.png" alt="token" />
                                     </div>
-                                    <div class="dets">
+                                    <div class="dets ms-4 mt-2">
                                         <h3>Campaigns</h3>
                                         <p>€823,121</p>
                                     </div>
                                 </div>
                                 <div
-                                    class="tokenWrap d-flex align-items-center justify-content-sm-evenly flex-wrap text-sm-start text-center justify-content-center">
+                                    class="tokenWrap d-flex align-items-center justify-content-sm-start px-4 flex-wrap text-sm-start text-center justify-content-center">
                                     <div class="img-tok">
                                         <img src="./assets/listToken.png" alt="token" />
                                     </div>
-                                    <div class="dets">
+                                    <div class="dets ms-4 mt-2">
                                         <h3>€ / Recipient</h3>
                                         <p>€0.912</p>
                                     </div>
@@ -722,30 +726,34 @@
                 <h3 class="subHead text-white">Contact</h3>
                 <h1 class="mainHead text-white">Get In Touch</h1>
             </div>
-            <form class="row g-3 mx-0">
+            <form class="row g-3 mx-0 needs-validation" id="contactForm" novalidate>
                 <div class="col-md-6 pe-md-3 pb-3">
-                    <label for="inputEmail1" class="form-label">First Name</label>
-                    <input type="text" class="form-control" placeholder="First Name" id="inputEmail1" />
+                    <label for="validationCustom01" class="form-label">First Name</label>
+                    <input type="text" class="form-control" placeholder="First Name" id="validationCustom01" required/>
                 </div>
                 <div class="col-md-6 ps-md-3 pb-3">
-                    <label for="input11" class="form-label">Last Name</label>
-                    <input type="text" class="form-control" placeholder="Last Name" id="input11" />
+                    <label for="validationCustom02" class="form-label">Last Name</label>
+                    <input type="text" class="form-control" placeholder="Last Name" id="validationCustom02" required/>
+                    <div class="valid-feedback">
+                       Kindly Fill the above field
+                      </div>
                 </div>
                 <div class="col-md-6 pe-md-3 pb-3">
-                    <label for="inputEmail2" class="form-label">Email</label>
-                    <input type="email" class="form-control" placeholder="Email Address" id="inputEmail2" />
+                    <label for="validationCustom03" class="form-label">Email</label>
+                    <input type="email" class="form-control" placeholder="Email Address" id="validationCustom03" required/>
                 </div>
                 <div class="col-md-6 ps-md-3 pb-3">
-                    <label for="input22" class="form-label">Company Website</label>
-                    <input type="url" class="form-control" placeholder="Company Website" id="input22" />
+                    <label for="validationCustom04" class="form-label">Company Website</label>
+                    <input type="url" class="form-control" placeholder="Company Website" id="validationCustom04"/>
                 </div>
                 <div class="col-12">
-                    <label for="inputAddress" class="form-label">Message</label>
-                    <textarea name="messsage" class="form-control" class="w-100" cols="30" rows="5"
-                        placeholder="Your Message"></textarea>
+                    <label for="validationCustom0105" class="form-label">Message</label>
+                    <textarea name="messsage" class="form-control" class="w-100" cols="30" rows="5" id="validationCustom05"
+                        placeholder="Your Message" required></textarea>
+                        <p class="text-danger opacity-0" id="note">*Please fill Out The Form First</p>
                 </div>
                 <div class="col-12 d-flex justify-content-center mt-4 pt-md-3">
-                    <button type="button" data-bs-toggle="modal" data-bs-target="#contactModal" type="button"
+                    <button  data-bs-target="#contactModal"  id="subbb" 
                         class="btn-submit">Send Message</button>
                 </div>
             </form>
@@ -766,7 +774,7 @@
                 <div class="modal-body sendmodel">
                     <img src="./assets/Group.png" alt="">
                     <h1 class="mt-3">Thank You</h1>
-                    <p>One of our team members is going to reach back to you within 24 hours!"</p>
+                    <p>One of our team members is going to reach back to you within 24 hours!</p>
                 </div>
             </div>
         </div>
@@ -780,11 +788,11 @@
             <img src="./assets/logo.png" alt="logo" class="footerLogo" />
 
             <p class="note my-md-4 my-3">
-                "Let us help you unlock your brand's potential with our tailored Email
+                Let us help you unlock your brand's potential with our tailored Email
                 <br />
-                and SMS marketing strategies."
+                and SMS marketing strategies.
             </p>
-            <p class="copyright mt-md-3 mt-2">"Copyright 2023. Velvstar Media"</p>
+            <p class="copyright mt-md-3 mt-2">Copyright 2023. Velvstar Media</p>
         </div>
     </footer>
     <!-- Footer  -->
