--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         audience while delivering on the objectives.
                     </p>
                 </div>
-            </div> 
+            </div>
         </div>
     </section>
     <!-- Services -->
@@ -151,13 +151,13 @@
         </div>
 
         <!-- Swiper -->
-        <div class="swiper mySwiper ms-5">
+        <div class="swiper mySwiper ms-md-5">
             <div class="swiper-wrapper py-4">
                 <div class="swiper-slide">
                     <div class="slideInner row mx-0">
                         <div
-                            class="tokenWrap d-flex align-items-center justify-content-sm-between flex-wrap text-sm-start text-center flex-sm-row justify-content-center flex-column mb-3 col-12">
-                            <div class="tokenInner d-flex justify-content-evenly">
+                            class="tokenWrap d-flex justify-content-sm-between flex-wrap text-sm-start text-center justify-content-center mb-3 col-12">
+                            <div class="tokenInner d-flex justify-content-evenly flex-sm-row flex-column">
                                 <div class="img-tok">
                                     <img src="./assets/token.png" alt="token" />
                                 </div>
@@ -166,15 +166,15 @@
                                     <p>3 months campaign</p>
                                 </div>
                             </div>
-                            <span class="badgeToken">38% Revenue</span>
+                            <span class="badgeToken mt-3">38% Revenue</span>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 ps-0 pe-sm-2 pe-1">
+                        <div class="total col-md-6 col-10 mt-1 ps-0 pe-sm-2 pe-1">
                             <div class="inner inner1">
                                 <h3>Total Brand Revenue</h3>
                                 <h2>€592,912</h2>
                             </div>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 pe-0 ps-sm-2 ps-1">
+                        <div class="total col-md-6 col-10 mt-1 pe-0 ps-sm-2 ps-1">
                             <div class="inner">
                                 <h3>Via Email Marketing</h3>
                                 <h2>€172,382</h2>
@@ -191,8 +191,8 @@
                 <div class="swiper-slide">
                     <div class="slideInner row mx-0">
                         <div
-                            class="tokenWrap d-flex align-items-center justify-content-sm-between flex-wrap text-sm-start text-center flex-sm-row justify-content-center flex-column mb-3 col-12">
-                            <div class="tokenInner d-flex justify-content-evenly">
+                            class="tokenWrap d-flex justify-content-sm-between flex-wrap text-sm-start text-center justify-content-center mb-3 col-12">
+                            <div class="tokenInner d-flex justify-content-evenly flex-sm-row flex-column">
                                 <div class="img-tok">
                                     <img src="./assets/token.png" alt="token" />
                                 </div>
@@ -201,15 +201,15 @@
                                     <p>3 months campaign</p>
                                 </div>
                             </div>
-                            <span class="badgeToken">38% Revenue</span>
+                            <span class="badgeToken mt-3">38% Revenue</span>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 ps-0 pe-sm-2 pe-1">
+                        <div class="total col-md-6 col-10 mt-1 ps-0 pe-sm-2 pe-1">
                             <div class="inner inner1">
                                 <h3>Total Brand Revenue</h3>
                                 <h2>€592,912</h2>
                             </div>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 pe-0 ps-sm-2 ps-1">
+                        <div class="total col-md-6 col-10 mt-1 pe-0 ps-sm-2 ps-1">
                             <div class="inner">
                                 <h3>Via Email Marketing</h3>
                                 <h2>€172,382</h2>
@@ -226,8 +226,8 @@
                 <div class="swiper-slide">
                     <div class="slideInner row mx-0">
                         <div
-                            class="tokenWrap d-flex align-items-center justify-content-sm-between flex-wrap text-sm-start text-center flex-sm-row justify-content-center flex-column mb-3 col-12">
-                            <div class="tokenInner d-flex justify-content-evenly">
+                            class="tokenWrap d-flex justify-content-sm-between flex-wrap text-sm-start text-center justify-content-center mb-3 col-12">
+                            <div class="tokenInner d-flex justify-content-evenly flex-sm-row flex-column">
                                 <div class="img-tok">
                                     <img src="./assets/token.png" alt="token" />
                                 </div>
@@ -236,15 +236,15 @@
                                     <p>3 months campaign</p>
                                 </div>
                             </div>
-                            <span class="badgeToken">38% Revenue</span>
+                            <span class="badgeToken mt-3">38% Revenue</span>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 ps-0 pe-sm-2 pe-1">
+                        <div class="total col-md-6 col-10 mt-1 ps-0 pe-sm-2 pe-1">
                             <div class="inner inner1">
                                 <h3>Total Brand Revenue</h3>
                                 <h2>€592,912</h2>
                             </div>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 pe-0 ps-sm-2 ps-1">
+                        <div class="total col-md-6 col-10 mt-1 pe-0 ps-sm-2 ps-1">
                             <div class="inner">
                                 <h3>Via Email Marketing</h3>
                                 <h2>€172,382</h2>
@@ -261,8 +261,8 @@
                 <div class="swiper-slide">
                     <div class="slideInner row mx-0">
                         <div
-                            class="tokenWrap d-flex align-items-center justify-content-sm-between flex-wrap text-sm-start text-center flex-sm-row justify-content-center flex-column mb-3 col-12">
-                            <div class="tokenInner d-flex justify-content-evenly">
+                            class="tokenWrap d-flex justify-content-sm-between flex-wrap text-sm-start text-center justify-content-center mb-3 col-12">
+                            <div class="tokenInner d-flex justify-content-evenly flex-sm-row flex-column">
                                 <div class="img-tok">
                                     <img src="./assets/token.png" alt="token" />
                                 </div>
@@ -271,15 +271,15 @@
                                     <p>3 months campaign</p>
                                 </div>
                             </div>
-                            <span class="badgeToken">38% Revenue</span>
+                            <span class="badgeToken mt-3">38% Revenue</span>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 ps-0 pe-sm-2 pe-1">
+                        <div class="total col-md-6 col-10 mt-1 ps-0 pe-sm-2 pe-1">
                             <div class="inner inner1">
                                 <h3>Total Brand Revenue</h3>
                                 <h2>€592,912</h2>
                             </div>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 pe-0 ps-sm-2 ps-1">
+                        <div class="total col-md-6 col-10 mt-1 pe-0 ps-sm-2 ps-1">
                             <div class="inner">
                                 <h3>Via Email Marketing</h3>
                                 <h2>€172,382</h2>
@@ -296,8 +296,8 @@
                 <div class="swiper-slide">
                     <div class="slideInner row mx-0">
                         <div
-                            class="tokenWrap d-flex align-items-center justify-content-sm-between flex-wrap text-sm-start text-center flex-sm-row justify-content-center flex-column mb-3 col-12">
-                            <div class="tokenInner d-flex justify-content-evenly">
+                            class="tokenWrap d-flex justify-content-sm-between flex-wrap text-sm-start text-center justify-content-center mb-3 col-12">
+                            <div class="tokenInner d-flex justify-content-evenly flex-sm-row flex-column">
                                 <div class="img-tok">
                                     <img src="./assets/token.png" alt="token" />
                                 </div>
@@ -306,15 +306,15 @@
                                     <p>3 months campaign</p>
                                 </div>
                             </div>
-                            <span class="badgeToken">38% Revenue</span>
+                            <span class="badgeToken mt-3">38% Revenue</span>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 ps-0 pe-sm-2 pe-1">
+                        <div class="total col-md-6 col-10 mt-1 ps-0 pe-sm-2 pe-1">
                             <div class="inner inner1">
                                 <h3>Total Brand Revenue</h3>
                                 <h2>€592,912</h2>
                             </div>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 pe-0 ps-sm-2 ps-1">
+                        <div class="total col-md-6 col-10 mt-1 pe-0 ps-sm-2 ps-1">
                             <div class="inner">
                                 <h3>Via Email Marketing</h3>
                                 <h2>€172,382</h2>
@@ -331,8 +331,8 @@
                 <div class="swiper-slide">
                     <div class="slideInner row mx-0">
                         <div
-                            class="tokenWrap d-flex align-items-center justify-content-sm-between flex-wrap text-sm-start text-center flex-sm-row justify-content-center flex-column mb-3 col-12">
-                            <div class="tokenInner d-flex justify-content-evenly">
+                            class="tokenWrap d-flex justify-content-sm-between flex-wrap text-sm-start text-center justify-content-center mb-3 col-12">
+                            <div class="tokenInner d-flex justify-content-evenly flex-sm-row flex-column">
                                 <div class="img-tok">
                                     <img src="./assets/token.png" alt="token" />
                                 </div>
@@ -341,15 +341,15 @@
                                     <p>3 months campaign</p>
                                 </div>
                             </div>
-                            <span class="badgeToken">38% Revenue</span>
+                            <span class="badgeToken mt-3">38% Revenue</span>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 ps-0 pe-sm-2 pe-1">
+                        <div class="total col-md-6 col-10 mt-1 ps-0 pe-sm-2 pe-1">
                             <div class="inner inner1">
                                 <h3>Total Brand Revenue</h3>
                                 <h2>€592,912</h2>
                             </div>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 pe-0 ps-sm-2 ps-1">
+                        <div class="total col-md-6 col-10 mt-1 pe-0 ps-sm-2 ps-1">
                             <div class="inner">
                                 <h3>Via Email Marketing</h3>
                                 <h2>€172,382</h2>
@@ -366,8 +366,8 @@
                 <div class="swiper-slide">
                     <div class="slideInner row mx-0">
                         <div
-                            class="tokenWrap d-flex align-items-center justify-content-sm-between flex-wrap text-sm-start text-center flex-sm-row justify-content-center flex-column mb-3 col-12">
-                            <div class="tokenInner d-flex justify-content-evenly">
+                            class="tokenWrap d-flex justify-content-sm-between flex-wrap text-sm-start text-center justify-content-center mb-3 col-12">
+                            <div class="tokenInner d-flex justify-content-evenly flex-sm-row flex-column">
                                 <div class="img-tok">
                                     <img src="./assets/token.png" alt="token" />
                                 </div>
@@ -376,15 +376,15 @@
                                     <p>3 months campaign</p>
                                 </div>
                             </div>
-                            <span class="badgeToken">38% Revenue</span>
+                            <span class="badgeToken mt-3">38% Revenue</span>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 ps-0 pe-sm-2 pe-1">
+                        <div class="total col-md-6 col-10 mt-1 ps-0 pe-sm-2 pe-1">
                             <div class="inner inner1">
                                 <h3>Total Brand Revenue</h3>
                                 <h2>€592,912</h2>
                             </div>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 pe-0 ps-sm-2 ps-1">
+                        <div class="total col-md-6 col-10 mt-1 pe-0 ps-sm-2 ps-1">
                             <div class="inner">
                                 <h3>Via Email Marketing</h3>
                                 <h2>€172,382</h2>
@@ -401,8 +401,8 @@
                 <div class="swiper-slide">
                     <div class="slideInner row mx-0">
                         <div
-                            class="tokenWrap d-flex align-items-center justify-content-sm-between flex-wrap text-sm-start text-center flex-sm-row justify-content-center flex-column mb-3 col-12">
-                            <div class="tokenInner d-flex justify-content-evenly">
+                            class="tokenWrap d-flex justify-content-sm-between flex-wrap text-sm-start text-center justify-content-center mb-3 col-12">
+                            <div class="tokenInner d-flex justify-content-evenly flex-sm-row flex-column">
                                 <div class="img-tok">
                                     <img src="./assets/token.png" alt="token" />
                                 </div>
@@ -411,15 +411,15 @@
                                     <p>3 months campaign</p>
                                 </div>
                             </div>
-                            <span class="badgeToken">38% Revenue</span>
+                            <span class="badgeToken mt-3">38% Revenue</span>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 ps-0 pe-sm-2 pe-1">
+                        <div class="total col-md-6 col-10 mt-1 ps-0 pe-sm-2 pe-1">
                             <div class="inner inner1">
                                 <h3>Total Brand Revenue</h3>
                                 <h2>€592,912</h2>
                             </div>
                         </div>
-                        <div class="total col-md-6 col-6 mt-1 pe-0 ps-sm-2 ps-1">
+                        <div class="total col-md-6 col-10 mt-1 pe-0 ps-sm-2 ps-1">
                             <div class="inner">
                                 <h3>Via Email Marketing</h3>
                                 <h2>€172,382</h2>
@@ -465,7 +465,7 @@
                         <div class="col-lg-6 wholeTok d-xl-none d-lg-block d-none pe-lg-0">
                             <div class="innerWrapper p-0 shadow-none h-100">
                                 <div
-                                    class="tokenWrap d-flex align-items-center justify-content-sm-start px-4 flex-wrap text-sm-start text-center flex-sm-row justify-content-center flex-column h-100">
+                                    class="tokenWrap d-flex justify-content-sm-start px-4 flex-wrap text-sm-start text-center justify-content-center h-100">
                                     <div class="img-tok">
                                         <img src="./assets/re-tok.png" alt="token" />
                                     </div>
@@ -490,7 +490,7 @@
                                     </div>
                                 </div>
                                 <div
-                                    class="tokenWrap d-flex align-items-center justify-content-sm-start px-4 flex-wrap text-sm-start text-center justify-content-center mb-2">
+                                    class="tokenWrap d-flex justify-content-sm-start px-4 flex-wrap text-sm-start text-center justify-content-center mb-2">
                                     <div class="img-tok">
                                         <img src="./assets/modalTab.png" alt="token" />
                                     </div>
@@ -500,7 +500,7 @@
                                     </div>
                                 </div>
                                 <div
-                                    class="tokenWrap d-flex align-items-center justify-content-sm-start px-4 flex-wrap text-sm-start text-center justify-content-center">
+                                    class="tokenWrap d-flex justify-content-sm-start px-4 flex-wrap text-sm-start text-center justify-content-center">
                                     <div class="img-tok">
                                         <img src="./assets/listToken.png" alt="token" />
                                     </div>
@@ -724,7 +724,7 @@
         <div class="container-lg py-5">
             <div class="topHead pb-5">
                 <h1 class="mainHead text-white">Get In Touch</h1>
-                <p>We look forward to hearing from you! One of our team <br>
+                <p>We look forward to hearing from you! One of our team <br class="breakLg">
                     members is going to get back to you within
                     24
                     hours.</p>
